k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-pipeline
  labels:
    app: gitops-pipeline
    app.kubernetes.io/name: gitops-pipeline
    app.kubernetes.io/component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-pipeline
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gitops-pipeline
        app.kubernetes.io/name: gitops-pipeline
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: api
          image: ghcr.io/vinicius-costa14/gitops-pipeline:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
