k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-pipeline
  labels:
    app: gitops-pipeline
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: gitops-pipeline
